# oxygen

./: GO_INSTALL_NOTE.txt  Makefile  README.md  docker-compose.local.yml  docker.env.example  go.mod  go.sum
.codex/: progress.md
.github/workflows/: release.yml
cmd/: all_in_one.go  migrate.go  migrate_test.go
config/: oxygen.example.yml
documentation/: Dockerfile  README.md  index.html  nginx.conf
documentation/api/: admin.html  dashboard.html  kms.html  merchant.html  payment.html
documentation/assets/: site.css
documentation/specs/: index.html
internal/app/: app.go
internal/config/: config.go
internal/kms/: app.go  app_test.go
internal/locator/: locator.go
internal/lock/: lock.go
internal/scheduler/: handler.go  handler_test.go
internal/test/: client.go  database.go  database_config_test.go  integration.go  integration_kms.go  mocks_kms.go  must.go
internal/webhook/: webhook.go  webhook_test.go
scripts/migrations/: 20230503223903-create_payment_links_table.sql  20260602120000-create_bitcoin_utxo_reservations_table.sql  20260609120000-add_donation_payment_links.sql
scripts/queries/: payment_links.sql  wallets.sql
sdks/: README.md
sdks/javascript/: README.md  package.json
sdks/php/: README.md  composer.json
sdks/python/: README.md  pyproject.toml
sdks/python/oxygenpay/: __init__.py  client.py
ui-dashboard/: .env.example  Makefile  vite.config.ts
ui-dashboard/src/: app.tsx  main.tsx
ui-payment/: .env.example  Makefile  index.html  package-lock.json  package.json  vite.config.ts
ui-payment/src/: App.tsx  main.tsx
(+164 files in other folders)
