[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oxygenpay"
version = "0.1.0"
description = "Python SDK for the OxygenPay Merchant API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "OxygenPay" }]
keywords = ["oxygenpay", "crypto", "payments", "sdk"]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["oxygenpay*"]

